# pkg_deb_digest_repro

./: BUILD.bazel  WORKSPACE  new.json  test.json  test.txt
